--- a/avail_projects.html
+++ b/avail_projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Available Projects</title>
+    <title>Upcoming Projects</title>
     <!-- Include your CSS files here -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/dark-theme.css" id="theme-stylesheet">
@@ -16,22 +16,36 @@
             <li><a href="avail_projects.html">Available Projects</a></li>
         </ul>
     </nav>
-    
-    <!-- Your "Available Projects" content goes here -->
-    <!-- Your "Available Projects" content goes here -->
-<article class="projects">
-     <h1>Available Projects</h1>
-     <div class="project-box">
-         <h2>Weather Classification</h2>
-         <p>
-             Weather Classification is an exciting project that aims to predict and classify weather conditions into four main categories: Rainy, Cloudy, Shine, and Sunrise. This project utilizes a powerful ensemble model combining state-of-the-art deep learning architectures such as CNN, VGG16, and DenseNet201. By leveraging the strengths of these models, we aim to provide accurate and reliable weather predictions, helping you plan your day more effectively.
-         </p>
-     </div>
- </article>
- 
-
-    <!-- Include your JavaScript file for the "Available Projects" page -->
-    <script src="js/main.js"></script>
-    <script src="js/avail_projects.js"></script>
+    <article class="project-details">
+        <h1 class="head">Available Projects</h1>
+        <div class="project-box">
+            <div class="project-container">
+                <h2 class="theme-text">1. Simple Calculator</h2>
+                <p class="theme-text">
+                    I had a blast creating this simple calculator web page using HTML, CSS, and JavaScript. It's a nifty tool that helps with everyday calculations.
+                </p>
+            </div>
+        </div>
+        <div class="project-box">
+            <div class="project-container">
+                <h2 class="theme-text">2. Cara - Clothing Store</h2>
+                <p class="theme-text">
+                    Exploring "Cara," my very own clothing store project, has been an exciting journey. You can browse through a curated selection of fashion items and accessories. (Add a link here to visit the Cara website.)
+                </p>
+            </div>
+        </div>
+        <div class="project-box">
+            <div class="project-container">
+                <h2 class="theme-text">3. Weather Classification</h2>
+                <p class="theme-text">
+                    Weather Classification is another intriguing project of mine. It predicts and classifies weather conditions into four main categories: Rainy, Cloudy, Shine, and Sunrise. I've harnessed the power of deep learning to make this project accurate and informative.
+                </p>
+                <p class="theme-text">
+                    For a dark-themed experience, check it out <a href="weather.html">here</a>.
+                </p>
+            </div>
+        </div>
+        <!-- Include additional available projects here -->
+    </article>
 </body>
 </html>
