--- a/about.html
+++ b/about.html
@@ -19,25 +19,23 @@
     
     <!-- Centered box container -->
     <div class="centered-box">
-     <!-- Your "About Me" content goes here -->
-<article class="about-me">
-     <h1>About Me</h1>
-     <div class="profile">
-         <img src="your-profile-image.jpg" alt="Your Profile Image">
-         <div class="profile-details">
-             <h2>Jaivanth Reddy</h2>
+        <article class="project-details">
+            <h1 class="theme-text">About Me</h1>
+            <!-- Add the box with shadow here -->
+            <div class="box-with-shadow">
+                <h2>Jaivanth Reddy</h2>
              <p>Age: 15</p>
              <p>Likes doing Python</p>
-         </div>
-     </div>
-         <p>
-             Hi there! I'm Jaivanth Reddy, a 15-year-old enthusiast with a passion for coding that rivals my love for a well-thrown football. When I'm not immersed in the world of Python and programming, you'll often find me on the field, trying to mimic the grace of Messi or the power of Ronaldo (well, in my dreams!). I also enjoy hanging out with my fantastic group of friends, who constantly remind me that life is as much about laughter as it is about lines of code.
-         </p>
-         <p>
-             Now, when I'm not running after a football or cracking jokes with friends, you might catch me sketching something creative (emphasis on "might" – my artistic skills are a work in progress!). I'm also a biking and car enthusiast, and I've been known to stare at sleek cars and bikes in awe, as if they were true works of art. So, whether I'm in the world of algorithms or on the open road, I'm always up for a thrilling adventure.
-         </p>
-     </div>
- </article>
+                
+                </div>
+                <p>
+                     Hi there! I'm Jaivanth Reddy, a 15-year-old enthusiast with a passion for coding that rivals my love for a well-thrown football. When I'm not immersed in the world of Python and programming, you'll often find me on the field, trying to mimic the grace of Messi or the power of Ronaldo (well, in my dreams!). I also enjoy hanging out with my fantastic group of friends, who constantly remind me that life is as much about laughter as it is about lines of code.
+                </p>
+                <p>
+                     Now, when I'm not running after a football or cracking jokes with friends, you might catch me sketching something creative . I'm also a biking and car enthusiast, and I've been known to stare at sleek cars and bikes in awe, as if they were true works of art. So, whether I'm in the world of algorithms or on the open road, I'm always up for a thrilling adventure.
+                </p>
+            </div>
+        </article>
    
      <!-- Your About Me page content goes here -->
     </div>
