Your commit message here

--- a/avail_projects.html
+++ b/avail_projects.html
@@ -14,6 +14,7 @@
             <li><a href="about.html">About Me</a></li>
             <li><a href="projects.html">Upcoming Projects</a></li>
             <li><a href="avail_projects.html">Available Projects</a></li>
+            <li><a href="contact.html">Contact me</a></li>
         </ul>
     </nav>
     <article class="project-details">
@@ -24,6 +25,9 @@
                 <p class="theme-text">
                     I had a blast creating this simple calculator web page using HTML, CSS, and JavaScript. It's a nifty tool that helps with everyday calculations.
                 </p>
+                <a href="https://drive.google.com/drive/folders/1k_8k_jhPD-V7C0vOGAtpGA_PltXFg2KA?usp=drive_link">
+                    <button class="learn-more-button" >download button</button>
+                </a>
             </div>
         </div>
         <div class="project-box">
@@ -32,6 +36,9 @@
                 <p class="theme-text">
                     Exploring "Cara," my very own clothing store project, has been an exciting journey. You can browse through a curated selection of fashion items and accessories. (Add a link here to visit the Cara website.)
                 </p>
+                <a href="https://drive.google.com/drive/folders/1wVXHmoF_--nkiYHerRsxC03MotqIjoiW?usp=drive_link">
+                    <button class="learn-more-button" >download button</button>
+                </a>
             </div>
         </div>
         <div class="project-box">
@@ -40,9 +47,9 @@
                 <p class="theme-text">
                     Weather Classification is another intriguing project of mine. It predicts and classifies weather conditions into four main categories: Rainy, Cloudy, Shine, and Sunrise. I've harnessed the power of deep learning to make this project accurate and informative.
                 </p>
-                <p class="theme-text">
-                    For a dark-themed experience, check it out <a href="weather.html">here</a>.
-                </p>
+                <a href="https://drive.google.com/drive/folders/1v-g44O8_XC_Dn2-Gjn0j-BcYeXCbzRWg?usp=drive_link">
+                    <button class="learn-more-button" >download button</button>
+                </a>
             </div>
         </div>
         <!-- Include additional available projects here -->
