--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,7 @@
             <li><a href="about.html">About Me</a></li>
             <li><a href="projects.html">Upcoming Projects</a></li>
             <li><a href="avail_projects.html">Available Projects</a></li>
+            <li><a href="contact.html">Contact me</a></li>
         </ul>
     </nav>
 
